<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    android:screenOrientation="portrait"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/team"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/team"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/match"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/match"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableLayout>
    <EditText
        android:id="@+id/team2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/team2"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/match2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/match"
        android:layout_marginBottom="10dp"
        android:paddingLeft="15dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/btn_blue2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@android:color/holo_blue_light"
            android:text="@string/blue"
            />

        <RadioButton
            android:id="@+id/btn_red2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@android:color/holo_red_light"
            android:text="@string/red"
            />
    </RadioGroup>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableLayout>
    <Button
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:id="@+id/begin"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:background="@android:color/background_light"
        android:onClick="_begin"
        android:stateListAnimator="@null"
        android:layout_marginBottom="30dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/slogo" />

</LinearLayout>
